# trello-uploader

./: README.md  pyproject.toml  tasks.txt
src/: main.py
