[project]
name = "trello-uploader"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "YumNumm", email = "onory0917@gmail.com" }
]
dependencies = ["trello~=0.9.7.3", "python-dotenv~=1.0.0", "py-trello~=0.19.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
